# finance-app

./: .gitignore  README.md  fred.py  main.py  pyproject.toml
config/: airflow.cfg
dags/: process_empoyees.py  tutorial.py  tutorial_task_flow_api.py
