[project]
name = "finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
